AUTOMAKE_OPTIONS        = subdir-objects

PYTHON_FILES =                                                                \
    djehuty/__init__.py                                                       \
    djehuty/ui.py                                                             \
    djehuty/backup/database.py                                                \
    djehuty/backup/figshare.py                                                \
    djehuty/backup/database.py                                                \
    djehuty/backup/ui.py                                                      \
    djehuty/utils/constants.py                                                \
    djehuty/utils/convenience.py                                              \
    djehuty/utils/rdf.py                                                      \
    djehuty/web/cache.py                                                      \
    djehuty/web/database.py                                                   \
    djehuty/web/email_handler.py                                              \
    djehuty/web/formatter.py                                                  \
    djehuty/web/locks.py                                                      \
    djehuty/web/ui.py                                                         \
    djehuty/web/validator.py                                                  \
    djehuty/web/wsgi.py                                                       \
    djehuty/web/xml_formatter.py

EXTRA_RESOURCES =                                                             \
    djehuty/backup/resources/contributors_organizations.json                  \
    djehuty/backup/resources/dois.json                                        \
    djehuty/backup/resources/groups.json                                      \
    djehuty/backup/resources/languages.json                                   \
    djehuty/backup/resources/licenses.json                                    \
    djehuty/backup/resources/public_collections.json                          \
    djehuty/backup/resources/root_categories.json                             \
    djehuty/web/resources/html_templates/400.html                             \
    djehuty/web/resources/html_templates/403.html                             \
    djehuty/web/resources/html_templates/404.html                             \
    djehuty/web/resources/html_templates/410.html                             \
    djehuty/web/resources/html_templates/activate_2fa_session.html            \
    djehuty/web/resources/html_templates/admin/dashboard.html                 \
    djehuty/web/resources/html_templates/admin/exploratory.html               \
    djehuty/web/resources/html_templates/admin/reports/dashboard.html         \
    djehuty/web/resources/html_templates/admin/reports/embargoed_datasets.html \
    djehuty/web/resources/html_templates/admin/reports/restricted_datasets.html \
    djehuty/web/resources/html_templates/admin/maintenance.html               \
    djehuty/web/resources/html_templates/admin/sparql.html                    \
    djehuty/web/resources/html_templates/admin/users.html                     \
    djehuty/web/resources/html_templates/author.html                          \
    djehuty/web/resources/html_templates/badge.svg                            \
    djehuty/web/resources/html_templates/categories.html                      \
    djehuty/web/resources/html_templates/category.html                        \
    djehuty/web/resources/html_templates/collection.html                      \
    djehuty/web/resources/html_templates/dataset_access_request.html          \
    djehuty/web/resources/html_templates/dataset.html                         \
    djehuty/web/resources/html_templates/depositor/collection-private-links.html \
    djehuty/web/resources/html_templates/depositor/dashboard.html             \
    djehuty/web/resources/html_templates/depositor/dataset-private-links.html \
    djehuty/web/resources/html_templates/depositor/edit-collection.html       \
    djehuty/web/resources/html_templates/depositor/edit-dataset.html          \
    djehuty/web/resources/html_templates/depositor/edit-session.html          \
    djehuty/web/resources/html_templates/depositor/language-selector.html     \
    djehuty/web/resources/html_templates/depositor/my-collections.html        \
    djehuty/web/resources/html_templates/depositor/my-data.html               \
    djehuty/web/resources/html_templates/depositor/new_private_link.html      \
    djehuty/web/resources/html_templates/depositor/profile.html               \
    djehuty/web/resources/html_templates/depositor/published-collection.html  \
    djehuty/web/resources/html_templates/depositor/submitted-for-review.html  \
    djehuty/web/resources/html_templates/email/2fa_token.html                 \
    djehuty/web/resources/html_templates/email/2fa_token.txt                  \
    djehuty/web/resources/html_templates/email/data_access_request.html       \
    djehuty/web/resources/html_templates/email/data_access_request.txt        \
    djehuty/web/resources/html_templates/email/dataset_submitted.html         \
    djehuty/web/resources/html_templates/email/dataset_submitted.txt          \
    djehuty/web/resources/html_templates/email/declined_dataset_notification.html \
    djehuty/web/resources/html_templates/email/declined_dataset_notification.txt \
    djehuty/web/resources/html_templates/email/feedback.html                  \
    djehuty/web/resources/html_templates/email/feedback.txt                   \
    djehuty/web/resources/html_templates/email/layout.html                    \
    djehuty/web/resources/html_templates/email/published_dataset_notification.html \
    djehuty/web/resources/html_templates/email/published_dataset_notification.txt \
    djehuty/web/resources/html_templates/email/quota_request.html             \
    djehuty/web/resources/html_templates/email/quota_request.txt              \
    djehuty/web/resources/html_templates/email/submitted_for_review_notification.html \
    djehuty/web/resources/html_templates/email/submitted_for_review_notification.txt \
    djehuty/web/resources/html_templates/feedback.html                        \
    djehuty/web/resources/html_templates/institutions.html                    \
    djehuty/web/resources/html_templates/layout.html                          \
    djehuty/web/resources/html_templates/maintenance.html                     \
    djehuty/web/resources/html_templates/opendap_to_doi.html                  \
    djehuty/web/resources/html_templates/portal.html                          \
    djehuty/web/resources/html_templates/private_link_is_expired.html         \
    djehuty/web/resources/html_templates/public_metadata.html                 \
    djehuty/web/resources/html_templates/review/overview.html                 \
    djehuty/web/resources/html_templates/review/published.html                \
    djehuty/web/resources/html_templates/search.html                          \
    djehuty/web/resources/metadata_templates/bibtex.bib                       \
    djehuty/web/resources/metadata_templates/endnote.enw                      \
    djehuty/web/resources/metadata_templates/refman.ris                       \
    djehuty/web/resources/metadata_templates/citation.cff                     \
    djehuty/web/resources/sparql_templates/account_by_email.sparql            \
    djehuty/web/resources/sparql_templates/account_by_session_token.sparql    \
    djehuty/web/resources/sparql_templates/account_categories.sparql          \
    djehuty/web/resources/sparql_templates/account_sessions.sparql            \
    djehuty/web/resources/sparql_templates/account_storage_used.sparql        \
    djehuty/web/resources/sparql_templates/account_uuid_by_orcid.sparql       \
    djehuty/web/resources/sparql_templates/accounts.sparql                    \
    djehuty/web/resources/sparql_templates/append_to_list.sparql              \
    djehuty/web/resources/sparql_templates/associated_authors.sparql          \
    djehuty/web/resources/sparql_templates/author_profile.sparql              \
    djehuty/web/resources/sparql_templates/author_public_items.sparql         \
    djehuty/web/resources/sparql_templates/authors.sparql                     \
    djehuty/web/resources/sparql_templates/categories.sparql                  \
    djehuty/web/resources/sparql_templates/categories_tree.sparql             \
    djehuty/web/resources/sparql_templates/category_by_id.sparql              \
    djehuty/web/resources/sparql_templates/collaborators.sparql               \
    djehuty/web/resources/sparql_templates/collection_dataset_containers.sparql \
    djehuty/web/resources/sparql_templates/collection_datasets.sparql         \
    djehuty/web/resources/sparql_templates/collection_datasets_count.sparql   \
    djehuty/web/resources/sparql_templates/collection_versions.sparql         \
    djehuty/web/resources/sparql_templates/collections.sparql                 \
    djehuty/web/resources/sparql_templates/collections_by_account.sparql      \
    djehuty/web/resources/sparql_templates/collections_from_dataset.sparql    \
    djehuty/web/resources/sparql_templates/container.sparql                   \
    djehuty/web/resources/sparql_templates/container_items.sparql             \
    djehuty/web/resources/sparql_templates/container_uuid_by_id.sparql        \
    djehuty/web/resources/sparql_templates/custom_fields.sparql               \
    djehuty/web/resources/sparql_templates/dataset_files.sparql               \
    djehuty/web/resources/sparql_templates/dataset_is_under_review.sparql     \
    djehuty/web/resources/sparql_templates/dataset_statistics.sparql          \
    djehuty/web/resources/sparql_templates/dataset_statistics_timeline.sparql \
    djehuty/web/resources/sparql_templates/dataset_storage_used.sparql        \
    djehuty/web/resources/sparql_templates/dataset_versions.sparql            \
    djehuty/web/resources/sparql_templates/datasets.sparql                    \
    djehuty/web/resources/sparql_templates/decline_draft_dataset.sparql       \
    djehuty/web/resources/sparql_templates/delete_account_property.sparql     \
    djehuty/web/resources/sparql_templates/delete_associations.sparql         \
    djehuty/web/resources/sparql_templates/delete_collaborator.sparql         \
    djehuty/web/resources/sparql_templates/delete_collection_draft.sparql     \
    djehuty/web/resources/sparql_templates/delete_dataset_draft.sparql        \
    djehuty/web/resources/sparql_templates/delete_dataset_embargo.sparql      \
    djehuty/web/resources/sparql_templates/delete_inactive_session_by_uuid.sparql \
    djehuty/web/resources/sparql_templates/delete_item_categories.sparql      \
    djehuty/web/resources/sparql_templates/delete_item_from_list.sparql       \
    djehuty/web/resources/sparql_templates/delete_private_links.sparql        \
    djehuty/web/resources/sparql_templates/delete_session.sparql              \
    djehuty/web/resources/sparql_templates/delete_session_by_uuid.sparql      \
    djehuty/web/resources/sparql_templates/delete_sessions.sparql             \
    djehuty/web/resources/sparql_templates/derived_from.sparql                \
    djehuty/web/resources/sparql_templates/explorer_properties.sparql         \
    djehuty/web/resources/sparql_templates/explorer_property_types.sparql     \
    djehuty/web/resources/sparql_templates/explorer_types.sparql              \
    djehuty/web/resources/sparql_templates/funding.sparql                     \
    djehuty/web/resources/sparql_templates/group.sparql                       \
    djehuty/web/resources/sparql_templates/group_by_name.sparql               \
    djehuty/web/resources/sparql_templates/contact_info_from_container.sparql \
    djehuty/web/resources/sparql_templates/latest_datasets_portal.sparql      \
    djehuty/web/resources/sparql_templates/licenses.sparql                    \
    djehuty/web/resources/sparql_templates/missing_checksummed_files_for_container.sparql \
    djehuty/web/resources/sparql_templates/opendap_to_doi.sparql              \
    djehuty/web/resources/sparql_templates/prefixes.sparql                    \
    djehuty/web/resources/sparql_templates/private_links.sparql               \
    djehuty/web/resources/sparql_templates/publish_draft_collection.sparql    \
    djehuty/web/resources/sparql_templates/publish_draft_dataset.sparql       \
    djehuty/web/resources/sparql_templates/record_uri.sparql                  \
    djehuty/web/resources/sparql_templates/references.sparql                  \
    djehuty/web/resources/sparql_templates/reviews.sparql                     \
    djehuty/web/resources/sparql_templates/root_categories.sparql             \
    djehuty/web/resources/sparql_templates/search_tags.sparql                 \
    djehuty/web/resources/sparql_templates/statistics.sparql                  \
    djehuty/web/resources/sparql_templates/statistics_authors.sparql          \
    djehuty/web/resources/sparql_templates/statistics_collections.sparql      \
    djehuty/web/resources/sparql_templates/statistics_datasets.sparql         \
    djehuty/web/resources/sparql_templates/statistics_files.sparql            \
    djehuty/web/resources/sparql_templates/subcategories_by_category.sparql   \
    djehuty/web/resources/sparql_templates/tags.sparql                        \
    djehuty/web/resources/sparql_templates/update_account.sparql              \
    djehuty/web/resources/sparql_templates/update_collection.sparql           \
    djehuty/web/resources/sparql_templates/update_dataset.sparql              \
    djehuty/web/resources/sparql_templates/update_dataset_thumb.sparql        \
    djehuty/web/resources/sparql_templates/update_file.sparql                 \
    djehuty/web/resources/sparql_templates/update_git_uuid.sparql             \
    djehuty/web/resources/sparql_templates/update_orcid_for_account.sparql    \
    djehuty/web/resources/sparql_templates/update_private_link.sparql         \
    djehuty/web/resources/sparql_templates/update_review.sparql               \
    djehuty/web/resources/sparql_templates/update_session.sparql              \
    djehuty/web/resources/sparql_templates/update_view_and_download_counts.sparql \
    djehuty/web/resources/static/css/dropzone.min.css                         \
    djehuty/web/resources/static/css/jquery.dataTables.min.css                \
    djehuty/web/resources/static/css/form.css                                 \
    djehuty/web/resources/static/css/main.css                                 \
    djehuty/web/resources/static/css/pub.css                                  \
    djehuty/web/resources/static/css/quill.4tu.css                            \
    djehuty/web/resources/static/fonts/fa-brands-400.eot                      \
    djehuty/web/resources/static/fonts/fa-brands-400.ttf                      \
    djehuty/web/resources/static/fonts/fa-brands-400.woff                     \
    djehuty/web/resources/static/fonts/fa-brands-400.woff2                    \
    djehuty/web/resources/static/fonts/fa-solid-900.eot                       \
    djehuty/web/resources/static/fonts/fa-solid-900.ttf                       \
    djehuty/web/resources/static/fonts/fa-solid-900.woff                      \
    djehuty/web/resources/static/fonts/fa-solid-900.woff2                     \
    djehuty/web/resources/static/fonts/FiraMono-Regular.ttf                   \
    djehuty/web/resources/static/fonts/SourceSansPro-Bold.ttf                 \
    djehuty/web/resources/static/fonts/SourceSansPro-Italic.ttf               \
    djehuty/web/resources/static/fonts/SourceSansPro-Regular.ttf              \
    djehuty/web/resources/static/images/collection-thumb.svg                  \
    djehuty/web/resources/static/images/CoreTrustSeal.png                     \
    djehuty/web/resources/static/images/dataset-thumb.svg                     \
    djehuty/web/resources/static/images/datatables/sort_asc.png               \
    djehuty/web/resources/static/images/datatables/sort_asc_disabled.png      \
    djehuty/web/resources/static/images/datatables/sort_both.png              \
    djehuty/web/resources/static/images/datatables/sort_desc.png              \
    djehuty/web/resources/static/images/datatables/sort_desc_disabled.png     \
    djehuty/web/resources/static/images/ext-link.png                          \
    djehuty/web/resources/static/images/favicon.ico                           \
    djehuty/web/resources/static/images/favicon.png                           \
    djehuty/web/resources/static/images/licenses/apache.png                   \
    djehuty/web/resources/static/images/licenses/cc-0.png                     \
    djehuty/web/resources/static/images/licenses/cc-by.png                    \
    djehuty/web/resources/static/images/licenses/cc-by-nc.png                 \
    djehuty/web/resources/static/images/licenses/cc-by-nc-nd.png              \
    djehuty/web/resources/static/images/licenses/cc-by-nc-sa.png              \
    djehuty/web/resources/static/images/licenses/cc-by-nd.png                 \
    djehuty/web/resources/static/images/licenses/cc-by-sa.png                 \
    djehuty/web/resources/static/images/licenses/gnu-gpl-v3.png               \
    djehuty/web/resources/static/images/loader.svg                            \
    djehuty/web/resources/static/images/logo.png                              \
    djehuty/web/resources/static/images/logo-delft.png                        \
    djehuty/web/resources/static/images/logo-eindhoven.png                    \
    djehuty/web/resources/static/images/logo-gray.svg                         \
    djehuty/web/resources/static/images/logo-other.png                        \
    djehuty/web/resources/static/images/logosleft-white-tudelft.png           \
    djehuty/web/resources/static/images/logosleft-white-tueindhoven.png       \
    djehuty/web/resources/static/images/logosleft-white-tutwente.png          \
    djehuty/web/resources/static/images/logosleft-white-wageningen.png        \
    djehuty/web/resources/static/images/logo-twente.png                       \
    djehuty/web/resources/static/images/logo-wageningen.png                   \
    djehuty/web/resources/static/images/nikhef-black.svg                      \
    djehuty/web/resources/static/images/orcid.svg                             \
    djehuty/web/resources/static/images/portal/aerospace-engineering.jpg      \
    djehuty/web/resources/static/images/portal/agricultural-and-veterinary-sciences.jpg \
    djehuty/web/resources/static/images/portal/atmospheric-sciences.jpg       \
    djehuty/web/resources/static/images/portal/biology.jpg                    \
    djehuty/web/resources/static/images/portal/built-environment-and-design.jpg \
    djehuty/web/resources/static/images/portal/business-and-management.jpg    \
    djehuty/web/resources/static/images/portal/chemistry.jpg                  \
    djehuty/web/resources/static/images/portal/civil-engineering.jpg          \
    djehuty/web/resources/static/images/portal/earth-sciences.jpg             \
    djehuty/web/resources/static/images/portal/electrical-and-electronic-engineering.jpg \
    djehuty/web/resources/static/images/portal/environmental-sciences.jpg     \
    djehuty/web/resources/static/images/portal/geomatic-engineering.jpg       \
    djehuty/web/resources/static/images/portal/information-and-computing-sciences.jpg \
    djehuty/web/resources/static/images/portal/materials-engineering.jpg      \
    djehuty/web/resources/static/images/portal/mathematics.jpg                \
    djehuty/web/resources/static/images/portal/mechanical-engineering.jpg     \
    djehuty/web/resources/static/images/portal/medical-and-health-sciences.jpg \
    djehuty/web/resources/static/images/portal/nanotechnology.jpg             \
    djehuty/web/resources/static/images/portal/other-institutions.jpg         \
    djehuty/web/resources/static/images/portal/physical-geography-and-environmental-geoscience.jpg \
    djehuty/web/resources/static/images/portal/physics.jpg                    \
    djehuty/web/resources/static/images/portal/tudelft.jpg                    \
    djehuty/web/resources/static/images/portal/tueindhoven.jpg                \
    djehuty/web/resources/static/images/portal/utwente.jpg                    \
    djehuty/web/resources/static/images/portal/wageningen.jpg                 \
    djehuty/web/resources/static/js/ace/ace.js                                \
    djehuty/web/resources/static/js/ace/ext-language_tools.js                 \
    djehuty/web/resources/static/js/ace/ext-searchbox.js                      \
    djehuty/web/resources/static/js/ace/mode-sparql.js                        \
    djehuty/web/resources/static/js/ace/theme-crimson_editor.js               \
    djehuty/web/resources/static/js/d3.v7.min.js                              \
    djehuty/web/resources/static/js/dataset_landing_page.js                   \
    djehuty/web/resources/static/js/depositor-dashboard.js                    \
    djehuty/web/resources/static/js/dropzone.min.js                           \
    djehuty/web/resources/static/js/edit-collection.js                        \
    djehuty/web/resources/static/js/edit-dataset.js                           \
    djehuty/web/resources/static/js/edit-profile.js                           \
    djehuty/web/resources/static/js/exploratory.js                            \
    djehuty/web/resources/static/js/jquery.dataTables.min.js                  \
    djehuty/web/resources/static/js/jquery-3.6.0.min.js                       \
    djehuty/web/resources/static/js/query-editor.js                           \
    djehuty/web/resources/static/js/quill.min.js                              \
    djehuty/web/resources/static/js/review-overview.js                        \
    djehuty/web/resources/static/js/ranking.js                                \
    djehuty/web/resources/static/js/utils.js

EXTRA_DIST      = $(PYTHON_FILES) $(EXTRA_RESOURCES)
